<resources>
    <string name="app_name">Plantilla con Validación de Campos</string>

    <string name="error_email" >Error Email</string>
    <string name="error_empty" >Error campo vacío</string>
    <string name="error_username" >Error nombre usuario</string>
    <string name="error_password_confirm" >Error contraseña</string>

    <string name="validate_password_confirm" >Confirmar Password</string>
    <string name="validate_btn" >Validar</string>
    <string name="validate_password" >Password</string>
    <string name="validate_username" >Usuario</string>
    <string name="validate_email" >Email</string>
</resources>
